--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@
 
 /* Navigation Bar */
 nav {
+    background-color: #f4f5fb;
+    color: black;
     width: 100%;
     padding: 20px;
     display: flex;
@@ -40,7 +42,7 @@ nav .logo {
 
 /* Logo Image */
 .logo-img {
-    width: 60px;      /* Change size if needed */
+    width: 300px;      /* Change size if needed */
     height: auto;
     margin-right: 20px; /* Space between logo and text */
     
@@ -65,7 +67,7 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: 18px;
     transition: color 0.3s;
 }
@@ -97,8 +99,9 @@ nav ul li a:hover {
 .btn {
     display: inline-block;
     padding: 12px 30px;
-    background: #ffcc00;
+    background:transparent;
     color: black;
+    border: 1px solid black;
     border-radius: 4px;
     text-decoration: none;
     font-size: 18px;
@@ -107,5 +110,47 @@ nav ul li a:hover {
 }
 
 .btn:hover {
-    background: #ffe680;
+    border:1px;
+    transition:1s;
+    background: #e9bc05;
+}
+@media(max-width:700px){
+    .text-box h1{
+        font-size: 20px;
+    }
+    .nav-links{
+        position:absolute;
+        background: yellowgreen;
+        height: 100vh;
+        width:-200px;
+        top:0;
+        right:0;
+        text-align:left;
+        z-index:2;
+        transition:0.4s;
+    }
+    .nav-links.active{
+        right:0;
+    }
+}
+
+/* Course */
+
+.course{
+    width:80%;
+    margin:auto;
+    text-align: center;
+    padding-top: 100px;
+}
+h1{
+   font-size: 36px;
+   font-weight: 600; 
+}
+p{
+    color: black;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 22px; 
+    padding: 10px;
+
 }
